--- a/CodeBook.html
+++ b/CodeBook.html
@@ -89,8 +89,21 @@ img {
 <li>mean and SD are calculated for each subject for each activity for each mean and SD measurements. The units given are g’s for the accelerometer and rad/sec for the gyro and g/sec and rad/sec/sec for the corresponding jerks.</li>
 </ul>
 <p>These signals were used to estimate variables of the feature vector for each pattern: ‘-XYZ’ is used to denote 3-axial signals in the X, Y and Z directions. They total 33 measurements including the 3 dimensions - the X,Y, and Z axes.</p>
-<p>tBodyAcc-XYZ tGravityAcc-XYZ tBodyAccJerk-XYZ tBodyGyro-XYZ tBodyGyroJerk-XYZ tBodyAccMag tGravityAccMag tBodyAccJerkMag tBodyGyroMag tBodyGyroJerkMag fBodyAcc-XYZ fBodyAccJerk-XYZ fBodyGyro-XYZ fBodyAccMag fBodyAccJerkMag fBodyGyroMag fBodyGyroJerkMag The set of variables that were estimated from these signals are:</p>
-<p>mean(): Mean value std(): Standard deviation</p>
+<p>The set of variables that were estimated from these signals are:</p>
+<p>mean(): Mean value<br />std(): Standard deviation</p>
+</div>
+<div id="data-set-information" class="section level3">
+<h3>Data Set Information:</h3>
+<p>The experiments have been carried out with a group of 30 volunteers within an age bracket of 19-48 years. Each person performed six activities wearing a smartphone on the waist. Using its embedded accelerometer and gyroscope, we captured 3-axial linear acceleration and 3-axial angular velocity at a constant rate of 50Hz. The experiments have been video-recorded to label the data manually. The obtained dataset has been randomly partitioned into two sets, where 70% of the volunteers was selected for generating the training data and 30% the test data.</p>
+<p>The sensor signals (accelerometer and gyroscope) were pre-processed by applying noise filters and then sampled in fixed-width sliding windows. From each window, a vector of features was obtained by calculating variables from the time and frequency domain.</p>
+<p>Finally performed the following steps</p>
+<ul>
+<li>Merges the training and the test sets to create one data set.<br /></li>
+<li>Extracts only the measurements on the mean and standard deviation for each measurement.<br /></li>
+<li>Uses descriptive activity names to name the activities in the data set<br /></li>
+<li>Appropriately labels the data set with descriptive variable names.<br /></li>
+<li>From the data set in step 4, creates a second, independent tidy data set with the average of each variable for each activity and each subject.</li>
+</ul>
 </div>
 </div>
 </div>
